<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:id="@+id/mainLayout">

	<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<include layout="@layout/appbar"/>

		<LinearLayout
			android:id="@+id/content"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="150dp"
			android:gravity="center|top"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginStart="15dp"
				android:layout_marginRight="15dp"
				android:orientation="vertical">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/graph_detail_graph_name"
					android:textSize="20dp"/>
				<EditText
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/graph_detail_graph_name"
					android:id="@+id/edit_graph_name"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:layout_marginLeft="15dp"
				android:layout_marginStart="15dp"
				android:layout_marginRight="15dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/graph_detail_graph_unit_type"
					android:textSize="20dp"/>

				<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<RadioButton
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/unit_numbers"
						android:text="@string/graph_detail_graph_unit_numbers"
						android:checked="true"/>

					<RadioButton
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/unit_units"
						android:text="@string/graph_detail_graph_unit_units"/>

				</RadioGroup>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/buttons"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp">
				<Button
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/button_ok"
					android:id="@+id/graph_detail_ok"/>
				<Button
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/button_cancel"
					android:layout_marginStart="40dp"
					android:layout_marginLeft="40dp"
					android:id="@+id/graph_detail_cancel"/>

			</LinearLayout>
		</LinearLayout>
	</android.support.design.widget.CoordinatorLayout>

	<include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>
