<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:id="@+id/mainLayout">

	<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<include layout="@layout/appbar"/>

		<LinearLayout
			android:id="@+id/content"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="150dp"
			android:gravity="center|top"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginStart="15dp"
				android:layout_marginRight="15dp"
				android:orientation="vertical">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/add_value_value_field_title"
					android:textSize="20sp"/>
				<!-- TODO: extract to fragment -->

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<Button
						android:id="@+id/add_value_sub_one"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/add_value_sub_one"
						android:visibility="gone"/>
					<EditText
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/add_value_value_field_title"
						android:id="@+id/add_value_value"/>
					<Button
						android:id="@+id/add_value_add_one"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/add_value_add_one"
						android:visibility="gone"/>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginStart="15dp"
				android:layout_marginRight="15dp"
				android:layout_marginTop="15dp"
				android:orientation="vertical">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/add_value_date_field_title"
					android:textSize="20sp"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="5dp"
					android:gravity="start">
					<TextView
						android:layout_width="170dp"
						android:layout_height="wrap_content"
						android:hint="january .22.2222"
						android:textSize="20sp"
						android:id="@+id/add_value_date"/>
					<TextView
						android:layout_width="70dp"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:hint="16:00"
						android:textSize="20sp"
						android:id="@+id/add_value_time"/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/buttons"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="20dp">
				<Button
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/button_ok"
					android:id="@+id/add_value_ok"/>
				<Button
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/button_cancel"
					android:layout_marginStart="40dp"
					android:layout_marginLeft="40dp"
					android:id="@+id/add_value_cancel"/>

			</LinearLayout>
		</LinearLayout>
	</android.support.design.widget.CoordinatorLayout>

	<include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>
