<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginBottom="20dp"
	android:fitsSystemWindows="true"
	android:id="@+id/graphView">

	<ImageView android:id="@+id/icon"
		style="@style/GraphviewIcon"
		android:src="@drawable/chart"
		android:contentDescription="@string/graph_view_icon_description"/>

	<org.linesofcode.alltrack.framework.ui.ScrollingTextview
		android:id="@+id/title"
		android:layout_width="match_parent"
		style="@style/GraphViewName"
		android:text="This temporary placeholder text will be overwritten by the app."
		android:layout_toEndOf="@+id/icon"
		android:layout_toRightOf="@+id/icon">
	</org.linesofcode.alltrack.framework.ui.ScrollingTextview>

	<com.github.mikephil.charting.charts.LineChart
		android:id="@+id/graph"
		android:layout_width="match_parent"
		android:layout_height="250dp"
		android:layout_below="@+id/icon"/>

</RelativeLayout>
